--- a/packages/docs-md/src/components/SideBar/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/SideBar/docusaurus/styles.module.css
@@ -15,6 +15,7 @@
    * should be `--ifm-heading-h3-font-size`, but it doesn't exist. It's `--ifm-h3-font-size` instead.
    */
   font-size: var(--ifm-h3-font-size);
+  margin: var(--ifm-list-item-margin);
 }
 
 .sidebarTrigger {
