--- a/packages/docs-md/src/components/Section/nextra/styles.module.css
+++ b/packages/docs-md/src/components/Section/nextra/styles.module.css
@@ -1,22 +1,35 @@
+.container {
+  padding-left: 0.75rem;
+}
+
+.header h2,
+.header h3,
+.header h4,
+.header h5,
+.header h6 {
+  margin: 0;
+  border: none;
+}
+
+.linedContainer {
+  border-inline: 1px solid var(--x-color-gray-200);
+  margin-bottom: 1rem;
+}
+
+.linedContainer:where(:global(.dark) *) {
+  border-inline: 1px solid var(--x-color-neutral-800);
+}
+
 .header {
   display: flex;
+}
+
+.linedHeader {
   border-bottom: 1px solid var(--x-color-gray-200);
-  border-radius: var(--x-radius-md);
   padding-bottom: 0.5rem;
+  margin-block: 1rem;
 }
 
-.header:where(:global(.dark) *) {
-  border-color: var(--x-color-neutral-800);
-}
-
-.title {
-  flex: 1;
-  color: var(--x-color-slate-900);
-  font-weight: var(--x-font-weight-semibold);
-  font-size: var(--x-text-2xl);
-  line-height: var(--x-leading, var(--x-text-2xl--line-height));
-}
-
-.title:where(:global(.dark) *) {
-  color: var(--x-color-slate-100);
+.linedHeader:where(:global(.dark) *) {
+  border-bottom: 1px solid var(--x-color-neutral-800);
 }
