--- a/packages/docs-md/src/components/TabbedSection/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/TabbedSection/docusaurus/styles.module.css
@@ -4,6 +4,19 @@
   border-radius: var(--ifm-breadcrumb-border-radius);
   font-weight: bold;
   min-width: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button div[slot="tab"] {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button div[slot="tab"] > p {
+  margin: 0;
 }
 
 .buttonInactive {
@@ -23,4 +36,20 @@
 .contents {
   display: flex;
   gap: 0.5rem;
+}
+
+.header {
+  padding-bottom: 0.5rem;
+}
+
+.header div[slot="title"] {
+  flex-grow: 1;
+}
+
+.header h2,
+.header h3,
+.header h4,
+.header h5,
+.header h6 {
+  margin: 0;
 }
