--- a/packages/docs-md/src/components/Section/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/Section/docusaurus/styles.module.css
@@ -1,19 +1,19 @@
-.header {
-  display: flex;
-  padding-bottom: var(--ifm-tabs-padding-vertical);
-  margin-bottom: var(--ifm-tabs-padding-vertical);
-  border-bottom: var(--ifm-global-border-width) solid var(--ifm-hr-background-color);
+.container {
+  padding-left: 0.75rem;
 }
 
-.title {
-  flex: 1;
-  margin: var(--ifm-list-item-margin);
-  font-weight: bold;
-  /*
-   * Note: the docs at https://docusaurus.community/knowledge/design/css/variables/ say this variable
-   * should be `--ifm-heading-h3-font-size`, but it doesn't exist. It's `--ifm-h3-font-size` instead.
-   */
-  font-size: var(--ifm-h3-font-size);
+.linedContainer {
+  border-inline: 1px solid var(--ifm-toc-border-color);
+  margin-bottom: 1rem;
+}
+
+.header {
+  display: flex;
+}
+
+.linedHeader {
+  border-bottom: 1px solid var(--ifm-toc-border-color);
+  margin-bottom: 1rem;
 }
 
 .card {
