--- a/packages/docs-md/src/components/ExpandableSection/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/ExpandableSection/docusaurus/styles.module.css
@@ -8,8 +8,8 @@
 }
 
 .heading {
-  border: var(--ifm-global-border-width) solid var(--ifm-blockquote-border-color);
-  border-radius: var(--ifm-global-radius);
+  border: var(--ifm-global-border-width) solid var(--ifm-toc-border-color);
+  border-radius: 0.2rem;
   padding: 0.5rem;
   width: 100%;
   display: flex;
