More section polish (#44)
* Lots of polish

* Cleaned up sections a lot

* Rewrote tabbed sections to use sections

* Padding fix

* Updated dep

* Fixed expandable sections not including frontmatter

* New slot mechanism that works in React 19

* Got Nextra up to speed

* Fixed type scroll-to

--- a/packages/docs-md/src/components/Section/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/Section/docusaurus/styles.module.css
@@ -1,21 +1,3 @@
-.container {
-  padding-left: 0.75rem;
-}
-
-.linedContainer {
-  border-inline: 1px solid var(--ifm-toc-border-color);
+.section {
   margin-bottom: 1rem;
-}
-
-.header {
-  display: flex;
-}
-
-.linedHeader {
-  border-bottom: 1px solid var(--ifm-toc-border-color);
-  margin-bottom: 1rem;
-}
-
-.card {
-  margin-bottom: var(--ifm-paragraph-margin-bottom);
 }
