--- a/packages/docs-md/src/components/TabbedSection/nextra/styles.module.css
+++ b/packages/docs-md/src/components/TabbedSection/nextra/styles.module.css
@@ -1,3 +1,18 @@
+.titleContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  flex-grow: 1;
+}
+
+.tabs {
+  display: flex;
+  gap: 0.3rem;
+}
+
 .button {
   color: var(--x-color-gray-500);
   border-radius: var(--x-radius-lg);
