--- a/packages/docs-md/src/components/Section/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/Section/docusaurus/styles.module.css
@@ -1,3 +1,17 @@
 .section {
   margin-bottom: 1rem;
 }
+
+.content {
+  padding-inline: 0.75rem;
+}
+
+.contentBorderAll {
+  border: 1px solid var(--ifm-toc-border-color);
+  border-radius: 0.3rem;
+}
+
+.noTopBorderRadius {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
