--- a/packages/docs-md/src/components/TabbedSection/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/TabbedSection/docusaurus/styles.module.css
@@ -4,8 +4,9 @@
 }
 
 .tabs {
+  padding-left: 0.5rem;
   display: flex;
-  gap: 0.3rem;
+  gap: 0.2rem;
 }
 
 .button {
@@ -18,7 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: calc( var(--ifm-breadcrumb-padding-vertical) * var(--ifm-breadcrumb-size-multiplier) ) calc( var(--ifm-breadcrumb-padding-horizontal) * var(--ifm-breadcrumb-size-multiplier) );
+  padding-block: 0.5rem;
 }
 
 .button div[slot="tab"] {
