--- a/packages/docs-md/src/components/ExpandableSection/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/ExpandableSection/docusaurus/styles.module.css
@@ -1,4 +1,5 @@
-.heading {
+.button {
+  display: flex;
   border: var(--ifm-global-border-width) solid var(--ifm-toc-border-color);
   border-radius: 0.3rem;
   padding: 0.5rem;
@@ -13,10 +14,18 @@
    * should be `--ifm-heading-h5-font-size`, but it doesn't exist. It's `--ifm-h5-font-size` instead.
    */
   font-size: var(--ifm-h5-font-size);
+
+  background-color: transparent;
 }
 
-.headingOpen {
+.buttonOpen {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   border-bottom: none;
+}
+
+.title {
+  display: flex;
+  flex-grow: 1;
+  padding-left: 0.25rem;
 }
