--- a/packages/docs-md/src/components/SectionContent/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/SectionContent/docusaurus/styles.module.css
@@ -6,23 +6,6 @@
   padding: 0.75rem;
 }
 
-.borderAll {
-  border-inline: 1px solid var(--ifm-toc-border-color);
+.borderAll:not(:first-child) {
   border-top: 1px solid var(--ifm-toc-border-color);
-}
-
-.borderAll:first-child {
-  border-top-left-radius: 0.3rem;
-  border-top-right-radius: 0.3rem;
-}
-
-.borderAll:last-child {
-  border-bottom: 1px solid var(--ifm-toc-border-color);
-  border-bottom-left-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem;
-}
-
-.borderAll .noBorderRadiusOnFirstElement:first-child {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
 }
