Got Nextra basically working (#54)

--- a/packages/docs-md/src/components/Section/nextra/styles.module.css
+++ b/packages/docs-md/src/components/Section/nextra/styles.module.css
@@ -11,3 +11,17 @@
      work well with our styles */
   margin: 0;
 }
+
+.contentBorderAll {
+  border: 1px solid var(--x-color-gray-200);
+  border-radius: 0.3rem;
+}
+
+.contentBorderAll:where(:global(.dark) *) {
+  border: 1px solid var(--x-color-neutral-800);
+}
+
+.noTopBorderRadius {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
