--- a/packages/docs-md/src/components/TabbedSection/nextra/styles.module.css
+++ b/packages/docs-md/src/components/TabbedSection/nextra/styles.module.css
@@ -4,19 +4,26 @@
 }
 
 .tabs {
+  padding-left: 0.5rem;
   display: flex;
   gap: 0.3rem;
 }
 
 .button {
   color: var(--x-color-gray-500);
+  border-color: var(--x-color-gray-200);
+  border: none;
   border-radius: var(--x-radius-lg);
   font-weight: bold;
   min-width: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  padding-block: 0.25rem;
+}
+
+.button:where(:global(.dark) *) {
+  border-color: var(--x-color-neutral-800);
 }
 
 .button div[slot="tab"] {
