--- a/packages/docs-md/src/components/Property/docusaurus/styles.module.css
+++ b/packages/docs-md/src/components/Property/docusaurus/styles.module.css
@@ -56,6 +56,7 @@
   align-items: center;
   width: fit-content;
   gap: 0.5rem;
+  padding-right: 0.5rem;
 
   /*
    * We set a minimum height for the title container to ensure that the title
