--- a/packages/docs-md/src/components/SectionContent/nextra/styles.module.css
+++ b/packages/docs-md/src/components/SectionContent/nextra/styles.module.css
@@ -15,32 +15,10 @@
   padding: 0.5rem 0.75rem;
 }
 
-.borderAll {
-  border-inline: 1px solid var(--x-color-gray-200);
+.borderAll:not(:first-child) {
   border-top: 1px solid var(--x-color-gray-200);
 }
 
-.borderAll:where(:global(.dark) *) {
-  border-inline: 1px solid var(--x-color-neutral-800);
+.borderAll:not(:first-child):where(:global(.dark) *) {
   border-top: 1px solid var(--x-color-neutral-800);
-}
-
-.borderAll:first-child {
-  border-top-left-radius: 0.3rem;
-  border-top-right-radius: 0.3rem;
-}
-
-.borderAll:last-child {
-  border-bottom: 1px solid var(--x-color-gray-200);
-  border-bottom-left-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem;
-}
-
-.borderAll:last-child:where(:global(.dark) *) {
-  border-bottom: 1px solid var(--x-color-neutral-800);
-}
-
-.borderAll .noBorderRadiusOnFirstElement:first-child {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
 }
