New section styles (#58)
* Initial style prep

* Rough approximation of lines:

* More style tweaks

* Semi-ported security and parameters

* Converted first half of request

* Finished refactoring operations code

* Bug fix

* Cleanup

--- a/packages/docs-md/src/components/DebugPlaceholder/styles.module.css
+++ b/packages/docs-md/src/components/DebugPlaceholder/styles.module.css
@@ -1,4 +1,4 @@
-.debugPlacholder {
+.debugPlaceholder {
   border: 1px dashed red;
   background-color: rgba(255, 0, 0, 0.1);
   padding: 1rem;
@@ -6,6 +6,6 @@
   margin-bottom: 1rem;
 }
 
-.debugPlacholder > p:last-child {
+.debugPlaceholder > p:last-child {
   margin-bottom: 0;
 }
