--- a/packages/docs-md/src/components/SectionTitle/styles.module.css
+++ b/packages/docs-md/src/components/SectionTitle/styles.module.css
@@ -17,14 +17,18 @@
   padding: 0;
 }
 
-.paddingDefault {
+.topLevel {
   padding-bottom: 1rem;
 }
 
-.borderDefault {
-  border-bottom: var(--speakeasy-border-width) solid var(--speakeasy-border-color);
+.breakout {
+  display: flex;
+  align-items: center;
+  border-left: var(--speakeasy-border-width) solid var(--speakeasy-expandable-line-color);
+  margin-left: 0.5rem;
 }
 
-.borderDefault .paddingDefault {
-  margin-bottom: 1rem;
+.breakoutLine {
+  min-width: 1rem;
+  border-top: var(--speakeasy-border-width) solid var(--speakeasy-expandable-line-color);
 }
