--- a/packages/docs-md/src/docusaurus.css
+++ b/packages/docs-md/src/docusaurus.css
@@ -2,7 +2,7 @@
   /* Generic variables */
   --speakeasy-border-color: var(--ifm-toc-border-color);
   --speakeasy-border-width: var(--ifm-global-border-width);
-  --speakeasy-border-radius-sm: 0.3rem;
+  --speakeasy-border-radius-sm: 0.2rem;
   --speakeasy-border-radius-md: 0.5rem;
   --speakeasy-border-radius-lg: var(--ifm-breadcrumb-border-radius);
   --speakeasy-font-mono: var(--ifm-font-family-monospace);
@@ -13,6 +13,8 @@
   --speakeasy-expandable-font-weight: bold;
   --speakeasy-expandable-padding-block: 0.5rem;
   --speakeasy-expandable-padding-inline: 0.5rem;
+  --speakeasy-expandable-line-color: var(--ifm-color-emphasis-500);
+  --speakeasy-expandable-line-color-active: var(--ifm-color-emphasis-1000);
 
   /* Pill specific variables */
   --speakeasy-pill-border-radius: var(--ifm-badge-border-radius);
