--- a/packages/docs-md/src/components/ExpandableSection/styles.module.css
+++ b/packages/docs-md/src/components/ExpandableSection/styles.module.css
@@ -1,25 +1,36 @@
 .button {
   align-items: center;
   background-color: transparent;
-  border-radius: var(--speakeasy-border-radius-sm);
-  border: var(--speakeasy-border-width) solid var(--speakeasy-border-color);
   display: flex;
   font-size: var(--speakeasy-expandable-font-size);
   font-weight: var(--speakeasy-expandable-font-weight);
   gap: 0.25rem 0.5rem;
   padding-block: var(--speakeasy-expandable-padding-block);
   padding-inline: var(--speakeasy-expandable-padding-inline);
+  border: none;
   width: 100%;
-}
-
-.buttonOpen {
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-  border-bottom: none;
 }
 
 .title {
   display: flex;
   flex-grow: 1;
   padding-left: 0.25rem;
+}
+
+.chevron {
+  transition: transform 0.2s ease-in-out;
+  transform-origin: center;
+}
+
+.chevronContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: var(--speakeasy-border-width) solid var(--speakeasy-expandable-line-color);
+  width: 2rem;
+  height: 2rem;
+}
+
+.chevronContainerOpen {
+  border-color: var(--speakeasy-expandable-line-color-active)
 }
