--- a/packages/docs-md/src/components/Property/styles.module.css
+++ b/packages/docs-md/src/components/Property/styles.module.css
@@ -9,7 +9,7 @@
   align-items: center;
 }
 
-.containerMutliline {
+.containerMultiline {
   flex-direction: column;
 }
 
@@ -26,7 +26,7 @@
   flex-grow: 1;
 }
 
-.containerMutliline .typeContainer {
+.containerMultiline .typeContainer {
   width: 100%
 }
 
