--- a/packages/docs-md/src/components/SectionContent/styles.module.css
+++ b/packages/docs-md/src/components/SectionContent/styles.module.css
@@ -12,10 +12,6 @@
   margin-bottom: 0;
 }
 
-.paddingDefault {
-  padding: 0.5rem 0.75rem;
-}
-
-.borderAll:not(:first-child) {
-  border-top: var(--speakeasy-border-width) solid var(--speakeasy-border-color);
+.breakout {
+  padding-left: 3rem;
 }
