--- a/packages/docs-md/src/docusaurus.css
+++ b/packages/docs-md/src/docusaurus.css
@@ -9,12 +9,11 @@
   --speakeasy-anchor-color: var(--ifm-color-primary);
 
   /* Expandable specific variables */
-  --speakeasy-expandable-font-size: var(--ifm-h5-font-size);
-  --speakeasy-expandable-font-weight: bold;
-  --speakeasy-expandable-padding-block: 0.5rem;
-  --speakeasy-expandable-padding-inline: 0.5rem;
-  --speakeasy-expandable-line-color: var(--ifm-color-emphasis-500);
-  --speakeasy-expandable-line-color-active: var(--ifm-color-emphasis-1000);
+  --speakeasy-expandable-button-radius: var(--speakeasy-border-radius-sm);
+  --speakeasy-expandable-line-color: var(--ifm-color-emphasis-300);
+  --speakeasy-expandable-line-color-active: var(--ifm-color-emphasis-800);
+  --speakeasy-expandable-cell-size: 1rem;
+  --speakeasy-expandable-cell-height-multiplier: 1.3;
 
   /* Pill specific variables */
   --speakeasy-pill-border-radius: var(--ifm-badge-border-radius);
