--- a/packages/docs-md/src/nextra.css
+++ b/packages/docs-md/src/nextra.css
@@ -9,10 +9,11 @@
   --speakeasy-anchor-color: var(--x-color-primary-600);
 
   /* Expandable specific variables */
-  --speakeasy-expandable-font-weight: bold;
-  --speakeasy-expandable-font-size: var(--ifm-h5-font-size);
-  --speakeasy-expandable-padding-block: calc(var(--x-spacing) * 1);
-  --speakeasy-expandable-padding-inline: calc(var(--x-spacing) * 2);
+  --speakeasy-expandable-button-radius: var(--speakeasy-border-radius-sm);
+  --speakeasy-expandable-line-color: var(--x-color-gray-200);
+  --speakeasy-expandable-line-color-active: var(--x-color-gray-900);
+  --speakeasy-expandable-cell-size: 1rem;
+  --speakeasy-expandable-cell-height-multiplier: 1.3;
 
   /* Pill specific variables */
   --speakeasy-pill-border-radius: var(--x-radius-md);
@@ -71,6 +72,10 @@
   --speakeasy-pill-info-background-color: color-mix(in oklab, var(--x-color-slate-200) 5%, transparent);
   --speakeasy-pill-info-color: color-mix(in oklab, var(--x-color-slate-200) 80%, transparent);
   --speakeasy-pill-info-border-color: color-mix(in oklab, var(--speakeasy-pill-info-color) 80%, transparent);
+
+  /* Expandable specific variables */
+  --speakeasy-expandable-line-color: var(--x-color-neutral-600);
+  --speakeasy-expandable-line-color-active: var(--x-color-neutral-200);
 
   /* Tab specific variables */
   --speakeasy-tab-button-color-inactive: var(--x-color-gray-500);
