--- a/packages/docs-md/src/runtime/components/ExpandableSection/styles.module.css
+++ b/packages/docs-md/src/runtime/components/ExpandableSection/styles.module.css
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: center;
   width: calc(2 * var(--speakeasy-expandable-cell-size));
-  height: var(--speakeasy-expandable-cell-size)
+  height: var(--speakeasy-expandable-treetoper-diameter);
 }
 
 .treeTopperDot {
   border: var(--speakeasy-border-width) solid var(--speakeasy-expandable-line-color);
   border-radius: 25%;
-  width: 50%;
+  width: var(--speakeasy-expandable-treetoper-diameter);
 }
 
 .connectingCellContainer {
@@ -48,11 +48,20 @@
   border-style: solid;
   border-radius: var(--speakeasy-expandable-button-radius);
   cursor: pointer;
-  padding: 0;
+  padding: 5px;
   appearance: none;
   background-color: transparent;
   width: calc(2 * var(--speakeasy-expandable-cell-size) - 6px);
   height: calc(2 * var(--speakeasy-expandable-cell-size) - 6px);
+}
+
+.expandableButtonCircle {
+  border-radius: 50%;
+}
+
+.expandableChevron {
+  transition: transform 0.2s ease-in-out;
+  transform-origin: center;
 }
 
 .expandableConnectionContainer {
@@ -72,7 +81,7 @@
   max-height: calc(2 * var(--speakeasy-expandable-cell-size) - 6px);
   margin: 3px;
   border: var(--speakeasy-border-width) solid var(--speakeasy-expandable-line-color);
-  border-radius: 1rem;
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
