--- a/packages/docs-md/src/runtime/docusaurus.css
+++ b/packages/docs-md/src/runtime/docusaurus.css
@@ -14,6 +14,7 @@
   --speakeasy-expandable-line-color-active: var(--ifm-color-emphasis-800);
   --speakeasy-expandable-cell-size: 1rem;
   --speakeasy-expandable-cell-height-multiplier: 1.3;
+  --speakeasy-expandable-treetoper-diameter: 8px;
 
   /* Pill specific variables */
   --speakeasy-pill-border-radius: var(--ifm-badge-border-radius);
