--- a/packages/docs-md/src/runtime/components/ExpandableSection/styles.module.css
+++ b/packages/docs-md/src/runtime/components/ExpandableSection/styles.module.css
@@ -166,6 +166,10 @@
   border-radius: var(--speakeasy-property-type-border-radius);
 }
 
+.typeInnerContainer a {
+  scroll-behavior: smooth;
+}
+
 .typeInnerContainerInline {
   width: fit-content;
 }
