--- a/packages/docs-md/src/runtime/components/ExpandableSection/styles.module.css
+++ b/packages/docs-md/src/runtime/components/ExpandableSection/styles.module.css
@@ -176,6 +176,7 @@
 
 .typeInnerContainerMultiline {
   padding: 0.5rem 0.75rem;
+  margin-bottom: 1rem;
 }
 
 /* For some reason, anchor tag styles are horribly butchered by something
