--- a/packages/docs-md/src/react/docusaurus.css
+++ b/packages/docs-md/src/react/docusaurus.css
@@ -67,4 +67,5 @@
   --speakeasy-property-type-color: var(--ifm-blockquote-color);
   --speakeasy-property-type-background-color: var(--ifm-code-background);
   --speakeasy-property-type-border-radius: var(--ifm-badge-border-radius);
+  --speakeasy-property-type-border-color: color-mix(in oklab, var(--ifm-code-background) 80%, transparent);
 }
