--- a/packages/docs-md/src/react/components/ExpandableSection/styles.module.css
+++ b/packages/docs-md/src/react/components/ExpandableSection/styles.module.css
@@ -62,6 +62,7 @@
 .expandableChevron {
   transition: transform 0.2s ease-in-out;
   transform-origin: center;
+  color: var(--speakeasy-expandable-line-color);
 }
 
 .expandableConnectionContainer {
@@ -164,6 +165,7 @@
   padding: var(--speakeasy-pill-padding);
   background-color: var(--speakeasy-property-type-background-color);
   border-radius: var(--speakeasy-property-type-border-radius);
+  border: 1px solid var(--speakeasy-property-type-border-color);
 }
 
 .typeInnerContainer a {
