--- a/packages/docs-md/src/react/nextra.css
+++ b/packages/docs-md/src/react/nextra.css
@@ -66,6 +66,7 @@
   --speakeasy-property-type-color: var(--x-color-primary-600);
   --speakeasy-property-type-background-color: var(--x-color-white);
   --speakeasy-property-type-border-radius: var(--speakeasy-border-radius-md);
+  --speakeasy-property-type-border-color: color-mix(in oklab, var(--x-color-white) 80%, transparent);
 }
 
 /* Dark theme variable overrides */
@@ -98,5 +99,5 @@
   /* Property specific variables */
   --speakeasy-property-type-background-color: var(--x-color-black);
   --speakeasy-property-type-color: color: var(--x-color-slate-200);
-  
+  --speakeasy-property-type-border-color: color-mix(in oklab, var(--x-color-black) 80%, transparent);
 }
