Non ts code samples (#73)
* Wired up configuration for multiple languages in try it now

* First draft of tabbed code samples

* Got it working

* Cleaned up code

--- a/packages/docs-md/src/react/components/TabbedSection/styles.module.css
+++ b/packages/docs-md/src/react/components/TabbedSection/styles.module.css
@@ -11,12 +11,10 @@
 
 .button {
   border-radius: var(--speakeasy-tab-button-border-radius);
-  font-weight: bold;
-  min-width: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-block: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .button div[slot="tab"] {
@@ -27,6 +25,7 @@
 
 .button p {
   margin: 0;
+  font-weight: bold;
 }
 
 .buttonInactive {
