Normalized code sample height (#74)

--- a/packages/docs-md/src/react/nextra.css
+++ b/packages/docs-md/src/react/nextra.css
@@ -13,6 +13,9 @@
   --speakeasy-code-border-radius: var(--x-radius-md);
   --speakeasy-code-font-size: var(--x-text-sm);
 
+  /* CodeSample specific variables */
+  --speakeasy-code-sample-height: 302px; /* Copied from Sandpack for now */
+
   /* Expandable specific variables */
   --speakeasy-expandable-button-radius: var(--speakeasy-border-radius-sm);
   --speakeasy-expandable-line-color: var(--x-color-gray-200);
