--- a/packages/docs-md/src/react/docusaurus.css
+++ b/packages/docs-md/src/react/docusaurus.css
@@ -13,6 +13,9 @@
   --speakeasy-code-border-radius: var(--ifm-code-border-radius);
   --speakeasy-code-font-size: var(--ifm-code-font-size);
 
+  /* CodeSample specific variables */
+  --speakeasy-code-sample-height: 302px; /* Copied from Sandpack for now */
+
   /* Expandable specific variables */
   --speakeasy-expandable-button-radius: var(--speakeasy-border-radius-sm);
   --speakeasy-expandable-line-color: var(--ifm-color-emphasis-300);
