--- a/src/nextra.css
+++ b/src/nextra.css
@@ -21,6 +21,7 @@
   --speakeasy-expandable-line-color: var(--x-color-gray-200);
   --speakeasy-expandable-cell-size: 1rem;
   --speakeasy-expandable-cell-height-multiplier: 1.3;
+  --speakeasy-expandable-treetoper-diameter: 8px;
 
   /* Pill specific variables */
   --speakeasy-pill-border-radius: var(--x-radius-md);
