Recursive spot fix (#109)
* Fixed weird recursive bug

* Readd orphaned change

* Rebuilt docs

* Version bump

--- a/packages/react/src/components/ExpandableSection/styles.module.css
+++ b/packages/react/src/components/ExpandableSection/styles.module.css
@@ -35,6 +35,17 @@
 .propertyTitleContainer h5,
 .propertyTitleContainer h6 {
   margin: 0;
+  padding: 0;
+}
+
+.propertyTitleSlotContainer h1,
+.propertyTitleSlotContainer h2,
+.propertyTitleSlotContainer h3,
+.propertyTitleSlotContainer h4,
+.propertyTitleSlotContainer h5,
+.propertyTitleSlotContainer h6 {
+  margin: 0;
+  padding: 0;
 }
 
 .typeInnerContainer,
