--- a/src/components/ExpandableSection/styles.module.css
+++ b/src/components/ExpandableSection/styles.module.css
@@ -38,12 +38,12 @@
   padding: 0;
 }
 
-.propertyTitleSlotContainer h1,
-.propertyTitleSlotContainer h2,
-.propertyTitleSlotContainer h3,
-.propertyTitleSlotContainer h4,
-.propertyTitleSlotContainer h5,
-.propertyTitleSlotContainer h6 {
+.titleSlotContainer h1,
+.titleSlotContainer h2,
+.titleSlotContainer h3,
+.titleSlotContainer h4,
+.titleSlotContainer h5,
+.titleSlotContainer h6 {
   margin: 0;
   padding: 0;
 }
