--- a/packages/react/src/docusaurus.css
+++ b/packages/react/src/docusaurus.css
@@ -81,4 +81,8 @@
   /* Embed specific variables */
   --speakeasy-embed-heading-font-size: var(--ifm-heading-font-size);
   --speakeasy-embed-heading-font-weight: var(--ifm-heading-font-weight);
+
+  /* Highlight color for anchor target flash */
+  --speakeasy-highlight-color: rgba(255, 235, 59, 0.6);
+
 }
