--- a/packages/react/src/nextra.css
+++ b/packages/react/src/nextra.css
@@ -81,6 +81,9 @@
   /* Embed specific variables */
   --speakeasy-embed-heading-font-size: var(--x-text-2xl);
   --speakeasy-embed-heading-font-weight: var(--x-font-weight-bold);
+
+  /* Highlight color for anchor target flash */
+  --speakeasy-highlight-color: rgba(255, 235, 59, 0.6);
 }
 
 /* Dark theme variable overrides */
