--- a/src/nextra.css
+++ b/src/nextra.css
@@ -88,6 +88,7 @@
   /* TryItNow specific variables */
   --speakeasy-try-it-now-run-button-color: var(--x-color-content);
   --speakeasy-try-it-now-run-button-background-color: var(--x-color-nextra-bg);
+  --speakeasy-try-it-now-panel-width: 50%;
 }
 
 /* Dark theme variable overrides */
