--- a/packages/react/src/docusaurus.css
+++ b/packages/react/src/docusaurus.css
@@ -88,4 +88,5 @@
   /* TryItNow specific variables */
   --speakeasy-try-it-now-run-button-color: var(--ifm-color-content);
   --speakeasy-try-it-now-run-button-background-color: var(--ifm-navbar-link-hover-background-color);
+  --speakeasy-try-it-now-panel-width: 50%;
 }
