--- a/packages/react/src/nextra.css
+++ b/packages/react/src/nextra.css
@@ -88,8 +88,7 @@
   /* TryItNow specific variables */
   --speakeasy-try-it-now-run-button-color: var(--x-color-content);
   --speakeasy-try-it-now-run-button-background-color: var(--x-color-nextra-bg);
-  --speakeasy-try-it-now-panel-width: 50%;
-}
+  --speakeasy-try-it-now-results-text-color: var(--x-color-primary-100);}
 
 /* Dark theme variable overrides */
 :root:where(.dark) {
