Custom sample cleanup (#156)
* Not sucky sidebar

* More cleanup

--- a/examples/custom/mistral/src/app/speakeasy.css
+++ b/examples/custom/mistral/src/app/speakeasy.css
@@ -17,7 +17,7 @@
 
   /* Expandable specific variables */
   --speakeasy-expandable-button-radius: var(--speakeasy-border-radius-sm);
-  --speakeasy-expandable-line-color: var(--speakeasy-border-color);
+  --speakeasy-expandable-line-color: color-mix(in oklab, var(--speakeasy-border-color), black 25%);
   --speakeasy-expandable-line-color-active: color-mix(in oklab, var(--speakeasy-border-color), black 50%);
   --speakeasy-expandable-cell-size: 1rem;
   --speakeasy-expandable-cell-height-multiplier: 1.3;
