--- a/examples/custom/pokeapi/src/app/speakeasy.css
+++ b/examples/custom/pokeapi/src/app/speakeasy.css
@@ -7,7 +7,7 @@
   --pokeapi-secondary-color: rgb(217, 217, 217);
 
   /* Generic variables */
-  --speakeasy-border-color: rgb(185 194 198);
+  --speakeasy-border-color: rgb(159, 192, 206);
   --speakeasy-border-width: 1px;
   --speakeasy-border-radius-sm: 0.2rem;
   --speakeasy-border-radius-md: 0.5rem;
