--- a/examples/custom/pokeapi/src/components/styles.module.css
+++ b/examples/custom/pokeapi/src/components/styles.module.css
@@ -22,3 +22,37 @@
 .headingContainer:hover .copyLinkButton {
   opacity: 1;
 }
+
+.list {
+  list-style-type: none;
+}
+
+.listEntry {
+  padding: 0.5rem;
+  border: 1px solid transparent;
+  display: flex;
+  flex-direction: row;
+}
+
+.listEntryLabel {
+  flex-grow: 1;
+}
+
+.listEntryButton {
+  padding-inline: 0.5rem;
+  background: none;
+  border: none;
+  color: white
+}
+
+.listEntry:hover {
+  border: 1px solid #444;
+  border-radius: var(--speakeasy-border-radius-sm);
+}
+
+.expandableChevron {
+  transition: transform 0.2s ease-in-out;
+  transform-origin: center;
+  color: var(--speakeasy-expandable-line-color);
+  height: 1rem;
+}
