--- a/packages/react/src/nextra.css
+++ b/packages/react/src/nextra.css
@@ -88,7 +88,12 @@
   /* TryItNow specific variables */
   --speakeasy-try-it-now-run-button-color: var(--x-color-content);
   --speakeasy-try-it-now-run-button-background-color: var(--x-color-nextra-bg);
-  --speakeasy-try-it-now-results-text-color: var(--x-color-primary-100);}
+  --speakeasy-try-it-now-results-text-color: var(--x-color-primary-100);
+  --speakeasy-try-it-now-results-info-background-color: color-mix(in oklab, var(--x-color-blue-700) 40%, transparent);
+  --speakeasy-try-it-now-results-error-background-color: color-mix(in oklab, var(--x-color-red-700) 40%, transparent);
+  --speakeasy-try-it-now-results-warn-background-color: color-mix(in oklab, var(--x-color-yellow-700) 40%, transparent);
+  --speakeasy-try-it-now-results-log-border-color: #cecece5a;
+}
 
 /* Dark theme variable overrides */
 :root:where(.dark) {
