--- a/src/components/TryItNow/components/styles.module.css
+++ b/src/components/TryItNow/components/styles.module.css
@@ -51,17 +51,42 @@
   max-width: 50%;
   overflow-y: auto;
   color: var(--speakeasy-try-it-now-results-text-color);
+  
   pre {
+    font-size: var(--speakeasy-code-font-size);
+    padding: 1rem;
     line-height: 1.5;
     color: var(--speakeasy-try-it-now-results-text-color);
     background-color: transparent;
     white-space: break-spaces;
+    margin: 0;
+    border-radius:0;
+
+    &.error {
+      background-color: var(--speakeasy-try-it-now-results-error-background-color);
+    }
+    
+    &.warn {
+      background-color: var(--speakeasy-try-it-now-results-warn-background-color);
+    }
+    
+    &.info {
+      background-color: var(--speakeasy-try-it-now-results-info-background-color);
+    }
+    
+    &.log {
+      background-color: transparent;
+    }
+
+    &.primitiveValue {
+      color: #569cd6;
+    }
+    border-bottom: 0.1rem solid var(--speakeasy-try-it-now-results-log-border-color);
   }
 }
 
 .resultsContent {
   display: flex;
-  padding: 1rem;
   flex-direction: column;
 }
 
