--- a/src/docusaurus.css
+++ b/src/docusaurus.css
@@ -89,4 +89,8 @@
   --speakeasy-try-it-now-run-button-color: var(--ifm-color-content);
   --speakeasy-try-it-now-run-button-background-color: var(--ifm-navbar-link-hover-background-color);
   --speakeasy-try-it-now-results-text-color: var(--ifm-color-white);
+  --speakeasy-try-it-now-results-info-background-color: color-mix(in oklab, var(--ifm-color-info) 20%, transparent);
+  --speakeasy-try-it-now-results-error-background-color: color-mix(in oklab, var(--ifm-color-danger) 20%, transparent);
+  --speakeasy-try-it-now-results-warn-background-color: color-mix(in oklab, var(--ifm-color-warning) 20%, transparent);
+  --speakeasy-try-it-now-results-log-border-color: #cecece5a;
 }
