fix: TIN adjust breakpoints and remove CSS nesting (#162)
* make breakpoint bigger, reduce redundant class container

* fix broken token

* undo nesting to avoid build errors

--- a/packages/react/src/nextra.css
+++ b/packages/react/src/nextra.css
@@ -129,7 +129,7 @@
 
   /* Property specific variables */
   --speakeasy-property-type-background-color: var(--x-color-black);
-  --speakeasy-property-type-color: color: var(--x-color-slate-200);
+  --speakeasy-property-type-color: var(--x-color-slate-200);
   --speakeasy-property-type-border-color: color-mix(in oklab, var(--x-color-black) 80%, transparent);
 
    /* TryItNow specific variables */
