--- a/packages/react/src/components/TryItNow/components/styles.module.css
+++ b/packages/react/src/components/TryItNow/components/styles.module.css
@@ -10,11 +10,11 @@
   display: flex;
   overflow: hidden;
   position: relative;
+}
 
-  div[slot="editor"] {
-    flex: 1;
-    max-width: 100%;
-  }
+.editorContainer div[slot="editor"] {
+  flex: 1;
+  max-width: 100%;
 }
 
 /* Run button styles */
@@ -34,10 +34,10 @@
   padding: var(--speakeasy-button-padding);
   border: none;
   position: relative;
+}
 
-  &:active {
-    transform: scale(0.95);
-  }
+.runButton:active {
+  transform: scale(0.95);
 }
 
 .results {
@@ -51,38 +51,38 @@
   max-width: 50%;
   overflow-y: auto;
   color: var(--speakeasy-try-it-now-results-text-color);
-  
-  pre {
-    font-size: var(--speakeasy-code-font-size);
-    padding: 1rem;
-    line-height: 1.5;
-    color: var(--speakeasy-try-it-now-results-text-color);
-    background-color: transparent;
-    white-space: break-spaces;
-    margin: 0;
-    border-radius:0;
+}
 
-    &.error {
-      background-color: var(--speakeasy-try-it-now-results-error-background-color);
-    }
-    
-    &.warn {
-      background-color: var(--speakeasy-try-it-now-results-warn-background-color);
-    }
-    
-    &.info {
-      background-color: var(--speakeasy-try-it-now-results-info-background-color);
-    }
-    
-    &.log {
-      background-color: transparent;
-    }
+.results pre {
+  font-size: var(--speakeasy-code-font-size);
+  padding: 1rem;
+  line-height: 1.5;
+  color: var(--speakeasy-try-it-now-results-text-color);
+  background-color: transparent;
+  white-space: break-spaces;
+  margin: 0;
+  border-radius: 0;
+  border-bottom: 0.1rem solid var(--speakeasy-try-it-now-results-log-border-color);
+}
 
-    &.primitiveValue {
-      color: #569cd6;
-    }
-    border-bottom: 0.1rem solid var(--speakeasy-try-it-now-results-log-border-color);
-  }
+.results pre.error {
+  background-color: var(--speakeasy-try-it-now-results-error-background-color);
+}
+
+.results pre.warn {
+  background-color: var(--speakeasy-try-it-now-results-warn-background-color);
+}
+
+.results pre.info {
+  background-color: var(--speakeasy-try-it-now-results-info-background-color);
+}
+
+.results pre.log {
+  background-color: transparent;
+}
+
+.results pre.primitiveValue {
+  color: #569cd6;
 }
 
 .resultsContent {
@@ -101,7 +101,7 @@
 }
 
 /* Stack vertically on tablets and below */
-@media screen and (max-width: 996px) {
+@media screen and (max-width: 1200px) {
   .editorContainer {
     height: 250px;
   }
